--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>TinyApp</title>
+</head>
+<%- include partials/_header.ejs %>
+<body>
+    <h2>This is Show Page</h2> 
+ <ul> 
+   <% for (const keys in urls) { %>
+   <li><%= keys %> - <a href='<%= urls[keys].shortURL %>'><%= urls[keys].longURL%></a></li>
+    <% } %>
+   </ul>
+</body>
+</html>
 
