created form to make short urls, set up post that is receiving correct response, created function to create new shortURL keys

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,7 +12,7 @@
    <li><%= keys %> - <a href='<%= urls[keys].shortURL %>'><%= urls[keys].longURL%></a></li>
     <% } %>
    </ul>
-   <a href='#'>Shorten New URL</a> 
+   <a href='/urls/new'>Shorten New URL</a> 
 </body>
 </html>
 
