--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,7 +9,7 @@
     <h2>This is Index Page</h2> 
  <ul> 
     <% for (const keys in urls) { %>
-   <li><%= keys %> - <a href='<%= urls[keys].shortURL %>'><%= urls[keys].longURL%></a></li>
+   <li><%= keys %> - <a href='<%= urls[keys].shortURL %>'><%= urls[keys].makelongURL%></a></li>
     <% } %>
    </ul>
    <a href='/urls/new'>Shorten New URL</a> 
