--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -2,10 +2,11 @@
 <html lang ="en">
   <head>
     <title>TinyApp</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body style="font-size: 20px; padding: 50px;">
+  <body>
     <% include partials/_header %>
-    <form action="/urls" method="POST" style="margin: 150px;">
+    <form action="/urls" method="POST">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
