--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
   <title>TinyApp</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <%- include partials/_header.ejs %>
   <body>
+
     <h2>This is Show Page</h2> 
     <ul> 
-      <% for (const keys in urls) { %>
-      <li><%= keys %> - <a href='<%= urls[keys].shortURL %>'><%= urls[keys].longURL%></a></li>
- 
-      <% } %>
+    
+        <form action="/urls/<%= shortURL %>/edit" method="POST">
+          <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+          <input type="submit" value="Edit"> <br>
+     
     </ul>
   </body>
 </html>
