--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,8 @@
 <h1>Tiny App </h1>
 <% if (!username) { %>
 
+  <a href='/urls/register'>Register Now</a> 
+
   <form action='/urls/login' Method='POST'>
     <input type='text' placeholder='email' name='email'>
     <input type='password' placeholder='password' name='password'>
