--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,13 +8,14 @@
   <body>
 
     <h2>This is Show Page</h2> 
-    <ul> 
-    <%= shortURL %> : <%= longURL %>
+    <ul>  
+    <%= shortURL %> : <%= longURL.longURL %>
     <form action="/urls/<%= shortURL %>/edit" method="POST">
     <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
     <input type="submit" value="Edit"> <br>
      
     </ul>
+    <a href='/urls/'>My Urls</a>  
   </body>
 </html>
 
