--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,16 +3,17 @@
 <head>
   <title>TinyApp</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/public/assets/styles.css/urls_index.css" type="text/css"/>
 </head>
 <%- include partials/_header.ejs %>
 <body>
     <% if (!user) { %>
 
-      <h2>Please login to view or change Urls!</h2>
+      <h2 >Please login to view or change Urls!</h2>
 
       <% }else { %>
 
-    <h2>This is Index Page</h2> 
+    <h2>Your Shortened Urls!</h2> 
  <ul> 
     <% for (const key in urls) { %>
    <li><%= key %> - <a href='<%= urls[key].shortURL %>'><%= urls[key].longURL%></a></li>
