--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -3,9 +3,11 @@
   <head>
     <title>TinyApp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/assets/styles.css/urls_new.css" type="text/css"/>
   </head>
+  <% include partials/_header %>
   <body>
-    <% include partials/_header %>
+  
     <form action="/urls" method="POST">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
