--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -3,9 +3,10 @@
 <head>
   <title>TinyApp</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/public/assets/styles.css/urls_register.css" type="text/css"/>
 </head>
 
-
+<%- include partials/_header.ejs %>
 <body>
     
     <h1>This is Register Page</h1>
