--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,6 +3,7 @@
 <head>
   <title>TinyApp</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/public/assets/styles.css/urls_show.css" type="text/css"/>
 </head>
 <%- include partials/_header.ejs %>
   <body>
